--- a/lectures/01-intro/intro.html
+++ b/lectures/01-intro/intro.html
@@ -13093,14 +13093,14 @@ div#notebook {
 </li>
 <li><p>People (scientists, goverment, health professionals, companies) collect data in order to answer certain questions. Statisticians's job is to help them extract knowledge and insights from data.</p>
 </li>
-<li><p>Must-read for statistics students:</p>
+<li><p>Must-read for students of statistics:</p>
 <ul>
-<li><a href="../readings/Donoho15FiftyYearsDataScience.pdf"><em>50 years of data sicence</em></a>, by David Donoho.</li>
+<li><a href="../../readings/Donoho15FiftyYearsDataScience.pdf"><em>50 years of data sicence</em></a>, by David Donoho.</li>
 <li><a href="https://hdsr.mitpress.mit.edu/pub/jhy4g6eg"><em>Data Science: An Artificial Ecosystem</em></a>, by Xiao-Li Meng </li>
 <li>... and the every article of the inaugural issue of the <a href="https://hdsr.mitpress.mit.edu"><em>Havard Data Science Review</em></a></li>
 </ul>
 </li>
-<li><p>If existing software tools readily solve the problem, use them.</p>
+<li><p>If existing software tools readily solve the problem, <strong>use them</strong>.</p>
 </li>
 <li><p>Often statisticians need to implement their own methods, test new algorithms, or tailor classical methods to new types of data (big, streaming).</p>
 </li>
@@ -13162,7 +13162,7 @@ we need to know which methods/algorithms are out there and what are their advant
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Acknowledgment">Acknowledgment<a class="anchor-link" href="#Acknowledgment">&#182;</a></h2><p>This lecture note is based on <a href="http://hua-zhou.github.io">Dr. Hua Zhou</a>'s 2019 Winter Statistical Computing course notes available at <a href="http://hua-zhou.github.io/teaching/biostatm280-2019spring/index.html">http://hua-zhou.github.io/teaching/biostatm280-2019spring/index.html</a>.</p>
+<h2 id="Acknowledgment">Acknowledgment<a class="anchor-link" href="#Acknowledgment">&#182;</a></h2><p>This lecture note has evolved from <a href="http://hua-zhou.github.io">Dr. Hua Zhou</a>'s 2019 Winter Statistical Computing course notes available at <a href="http://hua-zhou.github.io/teaching/biostatm280-2019spring/index.html">http://hua-zhou.github.io/teaching/biostatm280-2019spring/index.html</a>.</p>
 
 </div>
 </div>
