fix numbering issue

--- a/hw/hw1/hw01.html
+++ b/hw/hw1/hw01.html
@@ -14324,41 +14324,31 @@ $$</p>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<ol>
-<li>Explain what the above function does.</li>
-</ol>
+<p>1) Explain what the above function does.</p>
 
 </div>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<ol>
-<li>Write R code that generate a sample from $f$ of size 10,000 with a thinning of 500 <strong>and</strong> measure the time. Your R code should be a one-line. Run your code in Julia using the <code>RCall.jl</code> package.</li>
-</ol>
+<p>2) Write R code that generate a sample from $f$ of size 10,000 with a thinning of 500 <strong>and</strong> measure the time. Your R code should be a one-line. Run your code in Julia using the <code>RCall.jl</code> package.</p>
 
 </div>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<ol>
-<li>Write a Julia function <code>jgibbs()</code> that does the same compuation as <code>Rgibbs()</code>. (<em>Hint</em>. use <code>Distributions.jl</code>)</li>
-</ol>
+<p>3) Write a Julia function <code>jgibbs()</code> that does the same compuation as <code>Rgibbs()</code>. (<em>Hint</em>. use <code>Distributions.jl</code>)</p>
 
 </div>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<ol>
-<li>Run <code>jgibbs(100, 5)</code> and then repeat problem 2 for <code>jgibbs()</code>. How long does it take? Why do you run <code>jgibbs(100, 5)</code> before measuring the time?</li>
-</ol>
+<p>4) Run <code>jgibbs(100, 5)</code> and then repeat problem 2 for <code>jgibbs()</code>. How long does it take? Why do you run <code>jgibbs(100, 5)</code> before measuring the time?</p>
 
 </div>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<ol>
-<li>Compare the speed of <code>Rgibbs()</code> and <code>jgibbs()</code>. Also compare the programming efforts.</li>
-</ol>
+<p>5) Compare the speed of <code>Rgibbs()</code> and <code>jgibbs()</code>. Also compare the programming efforts.</p>
 
 </div>
 </div>
@@ -14372,33 +14362,25 @@ $$</p>
     <span class="n">k</span>
 <span class="k">end</span>
 </pre></div>
-<ol>
-<li>Use <code>@code_llvm</code> to find the LLVM bytecode of compiled <code>g(2)</code>.</li>
-</ol>
+<p>1) Use <code>@code_llvm</code> to find the LLVM bytecode of compiled <code>g(2)</code>.</p>
 
 </div>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<ol>
-<li>Use <code>@code_llvm</code> to find the LLVM bytecode of compiled <code>g(2.0)</code>.</li>
-</ol>
+<p>2) Use <code>@code_llvm</code> to find the LLVM bytecode of compiled <code>g(2.0)</code>.</p>
 
 </div>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<ol>
-<li>Compare the bytecode from questions 1 and 2. What do you find?  </li>
-</ol>
+<p>3) Compare the bytecode from questions 1 and 2. What do you find?</p>
 
 </div>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<ol>
-<li>Repeat questions 1-3 with <code>@code_native</code>. What is the difference from <code>@code_llvm</code>?</li>
-</ol>
+<p>4) Repeat questions 1-3 with <code>@code_native</code>. What is the difference from <code>@code_llvm</code>?</p>
 
 </div>
 </div>
@@ -14414,41 +14396,31 @@ with $e_{\min} \leq e \leq e_{\max}$.</p>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<ol>
-<li>How many floating-point numbers are there? </li>
-</ol>
+<p>1) How many floating-point numbers are there?</p>
 
 </div>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<ol>
-<li>What is the smallest positive number?</li>
-</ol>
+<p>2) What is the smallest positive number?</p>
 
 </div>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<ol>
-<li>What is the smallest number larger than 1? </li>
-</ol>
+<p>3) What is the smallest number larger than 1?</p>
 
 </div>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<ol>
-<li>What is the smallest number $X$, such that $X + 1 = X$? Assume the round to nearest, ties to even rule.</li>
-</ol>
+<p>4) What is the smallest number $X$, such that $X + 1 = X$? Assume the round to nearest, ties to even rule.</p>
 
 </div>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<ol>
-<li>Suppose $p=4$ and $b=2$ (and $e_{\min}$ is very small and $e_{\max}$ is very large). What is the next number after 20 in this number system?</li>
-</ol>
+<p>5) Suppose $p=4$ and $b=2$ (and $e_{\min}$ is very small and $e_{\max}$ is very large). What is the next number after 20 in this number system?</p>
 
 </div>
 </div>
@@ -14487,9 +14459,7 @@ b = b − n * a^2</code></pre>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<ol>
-<li>Compare Algorithms 1 and 2. Which algoritm is more likely to end up with catastrophic cancellation?</li>
-</ol>
+<p>1) Compare Algorithms 1 and 2. Which algoritm is more likely to end up with catastrophic cancellation?</p>
 
 </div>
 </div>
@@ -14510,25 +14480,19 @@ for i = 2,...,n {
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<ol>
-<li>Show that Algorithm 3 correctly computes the sum of squares.</li>
-</ol>
+<p>2) Show that Algorithm 3 correctly computes the sum of squares.</p>
 
 </div>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<ol>
-<li>Compare Algorithm 3 with Algorithms 1 and 2.</li>
-</ol>
+<p>3) Compare Algorithm 3 with Algorithms 1 and 2.</p>
 
 </div>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<ol>
-<li>Write a Julia function <code>wsos(x; w)</code> that computes the weighted sum of squares $\sum_{i=1^n}w_i(x_i - \bar{x})^2$ in a similar way to Algorithm 3. Here, <code>x</code> is an array of numbers, and <code>w</code> is an array of positive weights.</li>
-</ol>
+<p>4) Write a Julia function <code>wsos(x; w)</code> that computes the weighted sum of squares $\sum_{i=1^n}w_i(x_i - \bar{x})^2$ in a similar way to Algorithm 3. Here, <code>x</code> is an array of numbers, and <code>w</code> is an array of positive weights.</p>
 
 </div>
 </div>
