--- a/hw/hw1/hw01.html
+++ b/hw/hw1/hw01.html
@@ -14390,7 +14390,7 @@ $$</p>
 $$
     \pm 0.d_1d_2\dotsb d_p \times b^e
 $$
-with $e_{\min} \leq e \leq e_{\max}$.</p>
+with $e_{\min} \leq e \leq e_{\max}$. Assume that $d_1 \neq 0$.</p>
 
 </div>
 </div>
