--- a/hw/hw3/hw03.html
+++ b/hw/hw3/hw03.html
@@ -14265,27 +14265,23 @@ a.anchor-link {
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Q1.-Eigenvalue-computation">Q1. Eigenvalue computation<a class="anchor-link" href="#Q1.-Eigenvalue-computation">&#182;</a></h2><ol>
-<li>Let $\mathbf{A}$ be a symmetric $n\times n$ matrix. Show that a real number $z \in \mathbb{R}$ is a Rayleigh quotient if and only if $z$ is a diagonal entry of $\mathbf{Q}^T\mathbf{A}\mathbf{Q}$, where $\mathbf{Q} \in \mathbb{R}^{n\times n}$ is an orthogonal matrix.</li>
-</ol>
+<h2 id="Q1.-Eigenvalue-computation">Q1. Eigenvalue computation<a class="anchor-link" href="#Q1.-Eigenvalue-computation">&#182;</a></h2><p>1) Let $\mathbf{A}$ be a symmetric $n\times n$ matrix. Show that a real number $z \in \mathbb{R}$ is a Rayleigh quotient if and only if $z$ is a diagonal entry of $\mathbf{Q}^T\mathbf{A}\mathbf{Q}$, where $\mathbf{Q} \in \mathbb{R}^{n\times n}$ is an orthogonal matrix.</p>
 
 </div>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<ol>
-<li>Recall that the shifted inverse iteration depends on solving a linear system of the form $(\mathbf{A} - \sigma\mathbf{I})\mathbf{x} = \mathbf{v}$ where $\sigma$ is close to an eigenvalue of a symmetric matrix $\mathbf{A}$. That is, the linear system is likely ill-conditioned. How can then the algorithm work?
+<p>2) Recall that the shifted inverse iteration depends on solving a linear system of the form $(\mathbf{A} - \sigma\mathbf{I})\mathbf{x} = \mathbf{v}$ where $\sigma$ is close to an eigenvalue of a symmetric matrix $\mathbf{A}$. That is, the linear system is likely ill-conditioned. How can then the algorithm work?
 \<br>
 Suppose without loss of generality that $\mathbf{A}$ has an eigenvalue very small in absolute value. Take shift $\sigma=0$. Suppose $\mathbf{v}$ is a vector with components in the directions of all the eigenvectors $\mathbf{u}_1, \dotsc, \mathbf{u}_n$ of $\mathbf{A}$, associated with eigenvalues $|\lambda_1| \ll |\lambda_2| \le \dotsc \le |\lambda_n|$. Also suppose that linear system $\mathbf{A}\mathbf{x} = \mathbf{v}$ is solved backward stably, yielding a computed solution $\tilde{\mathbf{x}}$.
 Show that although $\tilde{\mathbf{x}}$ may be far from $\mathbf{x} = \mathbf{A}^{-1}\mathbf{v}$, $\tilde{\mathbf{x}}/\Vert \tilde{\mathbf{x}} \Vert$ will not be far from $\mathbf{x} / \Vert \mathbf{x} \Vert$.
 \
 (<em>Hint</em>. Using the matrix calculus rule, $d(\mathbf{A}^{-1}) = -\mathbf{A}^{-1}(d\mathbf{A})\mathbf{A}^{-1}$, or
 $$
- (\mathbf{A} + \delta\mathbf{A})^{-1} = \mathbf{A}^{-1} - \mathbf{A}^{-1}(\delta\mathbf{A})\mathbf{A}^{-1} + O(\Vert\delta\mathbf{A}\Vert^2)
- ,
+    (\mathbf{A} + \delta\mathbf{A})^{-1} = \mathbf{A}^{-1} - \mathbf{A}^{-1}(\delta\mathbf{A})\mathbf{A}^{-1} + O(\Vert\delta\mathbf{A}\Vert^2)
+    ,
 $$
-where $\delta\mathbf{A}$ is the roundoff error.)</li>
-</ol>
+where $\delta\mathbf{A}$ is the roundoff error.)</p>
 
 </div>
 </div>
@@ -14298,11 +14294,16 @@ where $\delta\mathbf{A}$ is the roundoff error.)</li>
 <pre><code>label, pix(1, 1), pix(1, 2), pix(1, 3), ..., pix(28, 28)</code></pre>
 <p>where <code>label</code> is a label corresponding to the digit represented by the image (0, 1, ..., 9), and <code>pix(r, c)</code> is the pixel intensity at row <code>r</code>, column <code>c</code> (an integer between 0 and 255 (inclusive)).</p>
 <p>The $i$-th image in a dataset is considered a vector $\mathbf{x}_i \in \mathbb{R}^p$, $p = 28\times 28 = 784$.</p>
+
+</div>
+</div>
+<div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <p>1) A widely used approach towards digit recognition is principal component analysis. Compute the sample covariance matrix
 $$
     \hat{\Sigma} = \frac{1}{n}\sum_{i=1}^n\mathbf{x}_i\mathbf{x}_i^T.
 $$
-    \
+\
 after standardization.
   Let $V \in \mathbb{R}^{d\times r}$ be the matrix whose columns are given by the eigenvectors of $\Sigma$  associated with the $r = 10$ largest eigenvalues.
 \
@@ -14342,33 +14343,28 @@ the loadings of each image $\mathbf{x}_i$ in terms of the principal components $
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<ol>
-<li>Compute summary statistics:<ul>
-<li>number of pages</li>
-<li>number of edges</li>
-<li>number of dangling nodes (pages with no out links)</li>
-<li>histogram of in-degrees</li>
-<li>which page has the maximum in-degree?</li>
-<li>histogram of out-degrees</li>
-<li>which page has the maximum out-degree?</li>
-<li>visualize the sparsity pattern of $\mathbf{A}$ using <code>UnicodePlots.jl</code>.    </li>
-</ul>
-</li>
-</ol>
+<p>4) Compute summary statistics:</p>
+
+<pre><code>- number of pages
+- number of edges
+- number of dangling nodes (pages with no out links)
+- histogram of in-degrees
+- which page has the maximum in-degree?
+- histogram of out-degrees
+- which page has the maximum out-degree?
+- visualize the sparsity pattern of $\mathbf{A}$ using `UnicodePlots.jl`.    </code></pre>
 
 </div>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<ol>
-<li><p>Set $p=0.8$ and solve the PageRank problem with the above $\mathbf{A}$ using</p>
-<ul>
-<li>An iterative linear system solver such as <a href="https://iterativesolvers.julialinearalgebra.org/dev/linear_systems/gmres/">GMRES</a>.</li>
-<li>An iterative EVD solver such as Arnoldi method. (Check out the <code>Lanczos/Arnoldi iterative method for top eigen-pairs</code> section in the lecture notes on EVD.)</li>
-</ul>
-<p>For iterative methods, use the <code>IterativeSolvers.jl</code> and <code>Arpack.jl</code> packages. Make sure to utilize the special structure of $\mathbf{P}$ to speed up the matrix-vector multiplication. (Hint: <code>LinearMaps.jl</code>)</p>
-</li>
-</ol>
+<p>5) Set $p=0.8$ and solve the PageRank problem with the above $\mathbf{A}$ using</p>
+
+<pre><code>- An iterative linear system solver such as [GMRES](https://iterativesolvers.julialinearalgebra.org/dev/linear_systems/gmres/).
+- An iterative EVD solver such as Arnoldi method. (Check out the `Lanczos/Arnoldi iterative method for top eigen-pairs` section in the lecture notes on EVD.)
+</code></pre>
+<p>\
+For iterative methods, use the <code>IterativeSolvers.jl</code> and <code>Arpack.jl</code> packages. Make sure to utilize the special structure of $\mathbf{P}$ to speed up the matrix-vector multiplication. (Hint: <code>LinearMaps.jl</code>)</p>
 
 </div>
 </div>
@@ -14428,8 +14424,7 @@ $$
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<ol>
-<li>Show that the condition number of problem $f: \mathbf{A} \mapsto \mathbf{A}^{-1}\mathbf{b}$, where $\mathbf{A}$ is an invertible matrix, is
+<p>7) Show that the condition number of problem $f: \mathbf{A} \mapsto \mathbf{A}^{-1}\mathbf{b}$, where $\mathbf{A}$ is an invertible matrix, is
 $$
 \kappa = \Vert\mathbf{A}\Vert\Vert\mathbf{A}^{-1}\Vert.
 $$
@@ -14438,8 +14433,7 @@ $$
 \Vert\mathbf{A}^{-1}(\delta \mathbf{A})\mathbf{x} \Vert = \Vert\mathbf{A}^{-1}\Vert\Vert\delta\mathbf{A}\Vert\Vert\mathbf{x}\Vert
 .
 $$
-Use part 6.)</li>
-</ol>
+Use part 6.)</p>
 
 </div>
 </div>
@@ -14481,17 +14475,13 @@ $$</p>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Q6.-Lasso-and-Danzig">Q6. Lasso and Danzig<a class="anchor-link" href="#Q6.-Lasso-and-Danzig">&#182;</a></h2><ol>
-<li>Formulate the Danzig selector problem as an LP.</li>
-</ol>
+<h2 id="Q6.-Lasso-and-Danzig">Q6. Lasso and Danzig<a class="anchor-link" href="#Q6.-Lasso-and-Danzig">&#182;</a></h2><p>1) Formulate the Danzig selector problem as an LP.</p>
 
 </div>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<ol>
-<li>Characterize $t_{\max}$, for which if $t \ge t_{\max}$, the solution to the Danzig selector problem does not vary. </li>
-</ol>
+<p>2) Characterize $t_{\max}$, for which if $t \ge t_{\max}$, the solution to the Danzig selector problem does not vary.</p>
 
 </div>
 </div>
