Q5 Gurobi API -> R linprog

--- a/hw/hw3/hw03.html
+++ b/hw/hw3/hw03.html
@@ -14463,7 +14463,7 @@ $$</p>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p>2) Find the solution to the above LP using Gurobi APIs directly.</p>
+<p>2) Find the solution to the above LP using the <code>linprog</code> R package (Your code should run on Julia).</p>
 
 </div>
 </div>
